--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 export.cfg
 export_presets.cfg
 
+mesh.tres
+assets/Meshes/
+
 # Imported translations (automatically generated from CSV files)
 *.translation
 
